# Tindra

./: .gitignore  CONTRIBUTING.md  LICENSE-AGPL  LICENSE-APACHE  NOTICE  README.md
.github/workflows/: ci.yml
apps/: README.md
apps/desktop/: README.md  analysis_options.yaml  pubspec.yaml
apps/desktop/integration_test/: agent_auth_test.dart  jump_host_test.dart  keystroke_test.dart  multi_tab_test.dart  port_forward_test.dart  profile_crud_test.dart  settings_test.dart  sftp_test.dart  simple_test.dart  smoke_test.dart  split_test.dart  telnet_test.dart  test_support.dart
apps/desktop/lib/: main.dart
apps/desktop/lib/l10n/: app_en.arb  app_ko.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ko.dart
apps/desktop/lib/src/: session_status.dart
apps/desktop/lib/src/files/: sftp_view.dart
apps/desktop/lib/src/profiles/: profile_views.dart
apps/desktop/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/desktop/lib/src/rust/api/: forward.dart  hello.dart  profiles.dart  settings.dart  sftp.dart  ssh.dart
apps/desktop/lib/src/session/: session_pane.dart
apps/desktop/lib/src/ui/: intents.dart  shell_chrome.dart  typography.dart
apps/desktop/rust/: Cargo.toml
apps/desktop/rust/src/: frb_generated.rs
apps/desktop/rust/src/api/: forward.rs  hello.rs  mod.rs  profiles.rs  settings.rs  sftp.rs  ssh.rs
apps/desktop/rust_builder/: pubspec.yaml
apps/desktop/rust_builder/android/: build.gradle  settings.gradle
apps/desktop/rust_builder/android/src/main/: AndroidManifest.xml
apps/desktop/rust_builder/ios/: rust_lib_tindra.podspec
apps/desktop/rust_builder/linux/: CMakeLists.txt
apps/desktop/rust_builder/macos/: rust_lib_tindra.podspec
apps/desktop/rust_builder/windows/: CMakeLists.txt
apps/desktop/test/: localizations_test.dart  security_ui_test.dart  session_status_test.dart  widget_test.dart
apps/desktop/windows/: CMakeLists.txt
apps/desktop/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
apps/desktop/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
apps/mobile/: README.md
apps/shared_ui/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
apps/shared_ui/lib/: tindra_shared_ui.dart
apps/shared_ui/test/: tindra_shared_ui_test.dart
bridge/: README.md  flutter_rust_bridge.yaml
core/: Cargo.toml
core/crates/tindra-ai/: Cargo.toml
core/crates/tindra-ai/src/: lib.rs
core/crates/tindra-core/: Cargo.toml
core/crates/tindra-core/src/: lib.rs
core/crates/tindra-core/src/api/: hello.rs  mod.rs
core/crates/tindra-mcp/: Cargo.toml
core/crates/tindra-mcp/src/: lib.rs
core/crates/tindra-plug/: Cargo.toml
core/crates/tindra-plug/src/: lib.rs
core/crates/tindra-pty/: Cargo.toml
core/crates/tindra-pty/src/: lib.rs
core/crates/tindra-sftp/: Cargo.toml
core/crates/tindra-sftp/src/: lib.rs
core/crates/tindra-ssh/: Cargo.toml
core/crates/tindra-ssh/src/: lib.rs
core/crates/tindra-store/: Cargo.toml
core/crates/tindra-store/src/: lib.rs
core/crates/tindra-sync/: Cargo.toml
core/crates/tindra-sync/src/: lib.rs
core/crates/tindra-term/: Cargo.toml
core/crates/tindra-term/src/: lib.rs
docs/: architecture.md  mvp-execution-plan.md  plugin-sdk.md  security-model.md  status.md  windows-packaging.md
scripts/: SETUP-WINDOWS.md  SETUP.md  codegen.ps1  codegen.sh  run-integration-tests.ps1
