[package]
name = "rust_lib_tindra"
version = "0.1.0"
edition = "2021"
description = "FFI bridge crate that exposes tindra-core to the Flutter desktop app via flutter_rust_bridge."

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tindra-core = { path = "../../../core/crates/tindra-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
