[package]
name = "tindra-ai"
description = "LLM provider abstraction for Tindra's AI assistant (BYOK)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tindra-term = { path = "../tindra-term" }

tokio.workspace     = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace   = true
zeroize.workspace   = true
serde.workspace     = true
serde_json.workspace = true
