[package]
name = "tindra-mcp"
description = "Model Context Protocol server and client for Tindra."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace     = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace   = true
serde.workspace     = true
serde_json.workspace = true
