[package]
name = "tindra-sftp"
description = "SFTP client and transfer queue for Tindra (russh-sftp)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tindra-ssh = { path = "../tindra-ssh" }

tokio.workspace     = true
thiserror.workspace = true
tracing.workspace   = true

# russh-sftp = { workspace = true }
