[package]
name = "tindra-term"
description = "Terminal emulator state machine — VT/ANSI parser and grid model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace   = true
serde.workspace     = true

# alacritty_terminal = { workspace = true }
